[package]
name = "pow_sha256"
version = "0.1.0"
authors = ["Robert Kornacki <robk@syre.io>, Aravinth Manivannan <realaravinth@bastsense.net>"]
description = """
SHA256 PoW on any serializable datatype.
"""
edition = "2018"
keywords = ["PoW", "sha256", "proof-of-work"]
readme = "readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcaptcha/pow_sha256"
categories = ["algorithms", "cryptography::cryptocurrencies"] 


[dependencies]
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
