[package]
name = "pow_sha256"
version = "0.2.1"
authors = [ "Aravinth Manivannan <realaravinth@bastsense.net>", "Robert Kornacki <robk@syre.io>"]
description = """
SHA256 PoW on any serializable datatype used in mCaptcha
"""
edition = "2018"
keywords = ["mCaptcha", "PoW", "sha256", "proof-of-work"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcaptcha/pow_sha256"
categories = ["captcha", "algorithms", "cryptography::cryptocurrencies"] 


[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
derive_builder = "0.11"
num = { version = "0.4.0", default-features = false, features = ["serde", "num-bigint"]}
